# omniORB-cmake

./: .gitignore  .travis.yml  CMakeLists.txt  codegen.cmake  package_config.cmake  platform_checks.cmake
cmake/: CheckFunctionExistsHeader.cmake  CheckHeaderSTDC.c  CheckHeaderSTDC.cmake  CheckStackDirection.c  CheckStackDirection.cmake  CheckWinVer.cmake  OmniORBConfig.cmake.in  OmniOrbConfig.cmake.in  run_omniidl.cmake  timeofdayTimezone.c
cmake/modules/: FindPython.cmake
contrib/: CMakeLists.txt
contrib/pkgconfig/: CMakeLists.txt
include/: .gitignore  omniconfig.h  omniconfig.h.cmake.in  omniconfig.h.in
include/omniORB4/: .gitignore  CORBA.h  CORBA_sysdep.h  CORBA_sysdep_cmake.h  acconfig.h  acconfig_cmake.h.in  aconfig.h
include/omniORB4/internal/: codeSetUtil.h
mk/: mingw.mk
src/: CMakeLists.txt
src/appl/: CMakeLists.txt
src/appl/omniMapper/: CMakeLists.txt
src/appl/omniNames/: CMakeLists.txt
src/appl/utils/: CMakeLists.txt
src/appl/utils/catior/: CMakeLists.txt
src/appl/utils/convertior/: CMakeLists.txt
src/appl/utils/genior/: CMakeLists.txt
src/appl/utils/nameclt/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/valuetype/: CMakeLists.txt
src/examples/valuetype/simple/: CMakeLists.txt  value.idl
src/lib/: CMakeLists.txt
src/lib/omniORB/: CMakeLists.txt
src/lib/omniORB/codesets/: CMakeLists.txt
src/lib/omniORB/connections/: CMakeLists.txt
src/lib/omniORB/dynamic/: CMakeLists.txt
src/lib/omniORB/orbcore/: CMakeLists.txt  corbaBoa.cc
src/lib/omniORB/orbcore/ssl/: CMakeLists.txt
src/lib/omniORB/ziop/: CMakeLists.txt
src/lib/omniORB/ziopdynamic/: CMakeLists.txt
src/lib/omnithread/: CMakeLists.txt
src/services/: CMakeLists.txt
src/services/mklib/: CMakeLists.txt
src/services/mklib/dynstublib/: CMakeLists.txt
src/services/mklib/stublib/: CMakeLists.txt
src/tool/: CMakeLists.txt
src/tool/omkdepend/: CMakeLists.txt
src/tool/omniidl/cxx/: CMakeLists.txt  idl.ll.source  idl.yy.source  idldump.cc  idlexpr.cc  idlfixed.cc  idlrepoId.cc  idlscope.cc  lex.yy.cc  y.tab.cc
src/tool/omniidl/cxx/cccp/: CMakeLists.txt  cccp.c  config.h
src/tool/omniidl/python/omniidl/: main.py
src/tool/omniidl/python3/omniidl/: main.py
